--- a/acg-cdx-membership-proxy/pom.xml
+++ b/acg-cdx-membership-proxy/pom.xml
@@ -161,6 +161,16 @@
 			</releases>
 		</pluginRepository>
 		<pluginRepository>
+			<id>mvnrepository</id>
+			<url>https://mvnrepository.com/artifact</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+		</pluginRepository>		
+		<pluginRepository>
 			<id>mulesoft-releases</id>
 			<name>mulesoft release repository</name>
 			<layout>default</layout>
